Fixed alignments

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -726,8 +726,15 @@ div[datepicker] {
 
 	.infobox-status {
 		vertical-align: top;
-		margin-top: 5px;
+		height: 40px;
 	}
+}
+
+.graph-button-image {
+    width: 30px;
+    height: 18px;
+    vertical-align: middle;
+    padding-bottom: 4px;
 }
 
 .infobox-campaign {
@@ -790,14 +797,14 @@ div[datepicker] {
 
 .infobox-header-wo-subtitle {
 	height: 34px;
-    line-height: 34px;
+    line-height: 38px;
 }
 
 .infobox-title {
     color: @infobox-black;
     font-size: 18px;
     font-weight: 600;
-    line-height: 24px;
+    line-height: 20px;
 }
 
 .infobox-icon {
